# migraciones

./: .env.example  .gitignore  DECISIONS.md  Dockerfile  README.md  docker-compose.yml  document_engine.db-shm  document_engine.db-wal  examples.http  pyproject.toml  requirements.txt
config/: abbreviations.yml  export_formats.yml
migrations/: env.py
migrations/versions/: 1f66bdffd67a_add_priority_to_batch_selectors.py  a3c7e0f1b902_add_destination_base_path_to_batches.py  f8f703953fe0_initial_schema.py
scripts/: recover_jobs.py  run_worker.py  test_drive_connection.py  test_ftp_connection.py  verify_destination.py
src/document_engine/: main.py  settings.py
src/document_engine/adapters/database/: models.py  session.py
src/document_engine/adapters/filesystem/: temp_storage.py
src/document_engine/api/: dependencies.py  schemas.py
src/document_engine/application/: background_runner.py  discovery_service.py  migration_service.py  naming_service.py  planning_service.py  recovery_service.py  search_service.py  validation_service.py
src/document_engine/domain/: entities.py  enums.py  errors.py  idempotency.py  naming_rules.py  state_machine.py
src/document_engine/ports/: ai_naming_provider.py  destination_repository.py  source_repository.py
src/document_engine/worker/: lease_manager.py
tests/integration/: test_api.py
tests/unit/: fakes.py  test_discovery_and_search.py  test_drive_connection_reset.py  test_migration_service.py  test_naming_rules.py  test_naming_service.py  test_parallel_runner.py  test_planning_service.py  test_recovery_and_validation.py
(+11 files in other folders)
